--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_perfil">Perfil</string>
+    <string name="medico">Médico</string>
+    <string name="paciente">Paciente</string>
+    <string name="title_activity_pacient">PacientActivity</string>
+
 </resources>
