criacao de varias coisas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="medico">Médico</string>
     <string name="paciente">Paciente</string>
     <string name="title_activity_pacient">PacientActivity</string>
+    <string name="title_activity_update_doctor">UpdateDoctorActivity</string>
 
 </resources>
