--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,24 @@
 <resources>
     <string name="app_name">DoutorQI</string>
-    <string name="title_activity_main">MainActivity</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_main">Doutor QI</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_perfil">Perfil</string>
     <string name="medico">Médico</string>
     <string name="paciente">Paciente</string>
     <string name="title_activity_pacient">PacientActivity</string>
     <string name="title_activity_update_doctor">UpdateDoctorActivity</string>
+
+    <string-array name="especialidades_array">
+        <item>Antibacteristaticologista</item>
+        <item>Otorrinolaringologista</item>
+        <item>Endocrinologista</item>
+        <item>Cardiologista</item>
+    </string-array>
+
+    <string-array name="planos_array">
+        <item>Amil</item>
+        <item>Fusex</item>
+        <item>Unimed</item>
+    </string-array>
 
 </resources>
